--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
+    "puppeteer": "^20.4.0",
     "razorpay": "^2.8.6"
   },
   "devDependencies": {
